fix: make button smaller

--- a/src/App.css
+++ b/src/App.css
@@ -35,9 +35,9 @@ a {
   border-radius: 50%;
   color: white;
   cursor: pointer;
-  font-size: 24px;
-  line-height: 64px;
-  width: 64px;
+  font-size: 18px;
+  line-height: 48px;
+  width: 48px;
 }
 
 /* Header */
